--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,4 +1,4 @@
-# From: https://github.com/pypa/cibuildwheel
+# Modified from: https://github.com/pypa/cibuildwheel
 name: Upload Python Package
 
 on:
@@ -13,37 +13,36 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest]
 
     steps:
-      - uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
-      # Used to host cibuildwheel
-      - uses: actions/setup-python@v2
+    - uses: actions/setup-python@v2
 
-      - name: Install cibuildwheel
-        run: python -m pip install -U setuptools wheel pip
+    - name: Install build package
+      run: python -m pip install -U build
 
-      - name: Build wheels
-        run: python setup.py sdist
+    - name: Build wheels
+      run: python -m build --sdist
 
-      - uses: actions/upload-artifact@v2
-        with:
-          name: dist
-          path: dist/*.tar.*
+    - uses: actions/upload-artifact@v2
+      with:
+        name: dist
+        path: dist/*.tar.*
 
   release:
     name: Release
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
-    needs: [ build_wheels ]
+    needs: [build_wheels]
     steps:
-      - uses: actions/download-artifact@v2
-        with:
-          name: dist
-          path: dist/
-      - name: Upload to PyPI
-        uses: pypa/gh-action-pypi-publish@master
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
+    - uses: actions/download-artifact@v2
+      with:
+        name: dist
+        path: dist/
+    - name: Upload to PyPI
+      uses: pypa/gh-action-pypi-publish@master
+      with:
+        user: __token__
+        password: ${{ secrets.PYPI_API_TOKEN }}
